# netbox-plugin-prometheus-sd

./: .bandit.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tasks.py  typed_ast-1.5.5-cp312-cp312-linux_x86_64.whl
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  lint.yml  publish.yml  python-publish.yml  release.yaml  stale.yaml
develop/: Dockerfile  configuration.py  dev.env  docker-compose.yml  plugin-config.py  prometheus.yml
development/: Dockerfile  configuration.py  docker-compose.yml
example/: Dockerfile  docker-compose.yml  plugin_requirements.txt
example/configuration/: README.MD  alert.rules.yml  alertmanager.yml  plugins.py  prometheus.yml
example/envs/: netbox.env
example/initializers/: cluster_groups.yml  cluster_types.yml  clusters.yml  custom_fields.yml  device_roles.yml  device_types.yml  devices.yml  interfaces.yml  ip_addresses.yml  manufacturers.yml  platforms.yml  rack_roles.yml  racks.yml  regions.yml  sites.yml  tenant_groups.yml  tenants.yml  virtual_machines.yml  virtualization_interfaces.yml
netbox_prometheus_sd/: __init__.py  filtersets.py  settings.py
netbox_prometheus_sd/api/: __init__.py  mapper.py  models.py  serializers.py  urls.py  utils.py  views.py
netbox_prometheus_sd/tests/: __init__.py  test_api.py  test_filtersets.py  test_mapper.py  test_model.py  test_serializers.py  test_utils.py  utils.py
