[tool.poetry]
name = "netbox-plugin-prometheus-sd"
version = "0.0.0" # placeholder
description = "A Netbox plugin to provide Netbox entires to Prometheus HTTP service discovery"
authors = ["Felix Peters <felix.peters@breuninger.de>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "netbox_prometheus_sd" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.1"
invoke = "^2.0.0"
pylint = "^2.15.5"
pylint-django = "^2.5.3"
yamllint = "^1.28.0"
typed-ast = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
