[tool.poetry]
name = "netbox-plugin-prometheus-sd"
version = "0.0.0" # placeholder
description = "A Netbox plugin to provide Netbox entires to Prometheus HTTP service discovery"
authors = ["Felix Peters <felix.peters@breuninger.de>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "netbox_prometheus_sd" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.dev-dependencies]
invoke = "^2.2.0"
typed-ast = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
