[tool.poetry]
name = "netbox-plugin-prometheus-sd"
version = "0.0.0" # placeholder
description = "A Netbox plugin to provide Netbox entires to Prometheus HTTP service discovery"
authors = ["Felix Peters <felix.peters@breuninger.de>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "netbox_prometheus_sd" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
docker = "^7.1.0"
testcontainers = {extras = ["postgres", "redis", "generic"], version = "^4.14.1"}
python-semantic-release = "^10.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["netbox_prometheus_sd/__init__.py:__VERSION__"]
build_command = "poetry build"

[tool.semantic_release.branches.prerelease]
# Matches branches with the prefixes 'pre/'.
match = "^(pre)/.+"
prerelease = true
prerelease_token = "pre"
